<resources>
    <string name="app_name">Round Sync</string>
    <string name="app_description">Rclone for Android</string>
    <string name="app_short_name">Round Sync</string>
    <string name="title_activity_image_viewer">Images</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_contributors">License</string>
    <string name="remotes">Remotes</string>
    <string name="settings">Settings</string>
    <string name="import_rclone_config">Import config</string>
    <string name="export_rclone_config">Export config</string>
    <string name="about">About</string>
    <string name="sort">Sort</string>
    <string name="select_all">Select all</string>
    <string name="serve">Serve…</string>
    <string name="download">Download</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="app_version">App Version</string>
    <string name="rclone_version">Rclone Version</string>
    <string name="changelog">Changelog</string>
    <string name="license_and_contributors">License and Contributors</string>
    <string name="credits_libraries">Libraries and Credits</string>
    <string name="star_on_github">Star on GitHub</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="author">Original Author</string>
    <string name="author_name" translatable="false">Patryk Kaczmarkiewicz &lt;github.com/patrykcoding&gt;</string>
    <string name="follow_on_github">Follow on GitHub</string>
    <string name="maintainer">Maintainer</string>
    <string name="maintainer_name" translatable="false">Felix Nüsse &lt;github.com/newhinton&gt;</string>
    <string name="old_maintainer">Old Maintainer</string>
    <string name="old_maintainer_name" translatable="false">x0b &lt;github.com/x0b&gt;</string>
    <string name="empty_folder">The folder is empty</string>
    <string name="ooops">Ooops!</string>
    <string name="no_config_found">No configuration found, please import or add remote</string>
    <string name="import_configuration">Import configuration</string>
    <string name="empty_state_icon">Empty state icon</string>
    <string name="file_icon">File icon</string>
    <string name="interpunct">•</string>
    <string name="remote_icon">Remote Icon</string>
    <string name="new_folder">New Folder</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="app_icon">App Icon</string>
    <string name="github_app_url" translatable="false">https://github.com/newhinton/Round-Sync</string>
    <string name="github_issue_url" translatable="false">https://github.com/newhinton/Round-Sync/issues/new/choose</string>
    <string name="github_author_url" translatable="false">https://github.com/patrykcoding</string>
    <string name="github_maintainer_url" translatable="false">https://github.com/newhinton</string>
    <string name="replace_config_file_question">Replace the current configuration file?</string>
    <string name="config_file_lost_statement">Your current configuration will be lost</string>
    <string name="continue_statement">Continue</string>
    <string name="worker_download_complete">Download complete</string>
    <string name="streaming_service_notification_title">Streaming Service</string>
    <string name="streaming_service_notification_content">Serving on http://127.0.0.1:%1$d</string>
    <string name="streaming_service_notification_channel_description">Streaming service</string>
    <string name="streaming_task_failed">Could not stream file</string>
    <string name="background_media_prep_notification_title">Background media prep</string>
    <string name="background_media_prep_notification_channel_name">Background media preparation</string>
    <string name="notification_media_prep_folder_line">Folder: %1$s</string>
    <string name="notification_media_prep_policy_folder_progress">Folder %1$d of %2$d: %3$s</string>
    <string name="notification_media_prep_policy_thumbnail_progress">Thumbnail %1$d / %2$d</string>
    <string name="notification_media_prep_thumbnail_line">Thumbnail: %1$d / %2$d</string>
    <string name="notification_media_prep_cache_line">Cache: %1$d / %2$d</string>
    <string name="thumbnail_server_notification_channel_description">Background thumbnail and media preparation (can be hidden)</string>
    <string name="thumbnail_server_failed">Thumbnail server failed to start</string>
    <string name="rcd_service_notification_channel_description">Background Service</string>
    <string name="worker_upload_complete">Upload complete</string>
    <string name="remotes_toolbar_title">Remotes</string>
    <string name="fab_upload_files">Upload Files</string>
    <string name="fab_new_folder">New Folder</string>
    <string name="okay_confirmation">Okay</string>
    <string name="selected">selected</string>
    <string name="rename_file">Rename a file</string>
    <string name="type_new_file_name">Enter a new file name</string>
    <string name="select_destination">Select destination</string>
    <string name="create_new_folder">Create a folder</string>
    <string name="hint_new_folder">Foldername</string>
    <string name="type_new_folder_name">Enter a new folder name</string>
    <string name="loading_file">Loading file</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">OK</string>
    <string name="file_renamed_success">File Renamed</string>
    <string name="make_directory_success">New folder created</string>
    <string name="error_getting_dir_content">Error retrieving directory contents</string>
    <string name="error_getting_remotes">Failed to retrieve remotes</string>
    <string name="error_mkdir">Error creating directory</string>
    <string name="error_moving_file">File move error</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_date_modified">By modification date</string>
    <string name="sort_by_size">By size</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="filename">Filename</string>
    <string name="modified_time">Modification time</string>
    <string name="size">Size</string>
    <string name="md5" translatable="false">MD5</string>
    <string name="sha1" translatable="false">SHA1</string>
    <string name="tap_to_calculate">Tap to calculate</string>
    <string name="calculating">Calculating..</string>
    <string name="hash_error">ERROR</string>
    <string name="hash_unsupported">UNSUPPORTED</string>
    <string name="hash_copied_confirmation">Hash copied to clipboard</string>
    <string name="copying_rclone_config">Copying rclone configuration</string>
    <string name="copying_rclone_config_fail">Failed to copy rclone configuration</string>
    <string name="import_configuration_fail_rclone">Failed to import. Your rclone.conf is not valid!</string>
    <string name="import_configuration_fail_zip_json_missing">Failed to import. Your Zip does not contain Triggers and Tasks!</string>
    <string name="import_configuration_fail_zip_conf_missing">Failed to import. Your Zip does not contain rclone.conf!</string>
    <string name="config_password_protected">Configuration file is password protected</string>
    <string name="please_enter_password">Enter your password</string>
    <string name="working">Working</string>
    <string name="error_unlocking_config">Error unlocking configuration</string>
    <string name="locked_configuration_password">Locked configuration password</string>
    <string name="configuration_is_password_protected">Configuration is password protected</string>
    <string name="press_to_unlock">Press to unlock</string>
    <string name="worker_download_failed">Download failed</string>
    <string name="worker_upload_failed">Upload failed</string>
    <string name="properties">Properties</string>
    <string name="open_as">Open as</string>
    <string name="open_as_text">Text</string>
    <string name="open_as_audio">Audio</string>
    <string name="open_as_video">Video</string>
    <string name="open_as_image">Image</string>
    <string name="open_with">Open with…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="restart_required">App restart is required</string>
    <string name="app_icon_made_by">App icon made by</string>
    <string name="smashicons" translatable="false">Smashicons</string>
    <string name="from">from</string>
    <string name="flaticon" translatable="false">Flaticon</string>
    <string name="intro_welcome_title">Welcome!</string>
    <string name="intro_welcome_description">Round Sync is a file management tool that can handle files stored on your device or in the cloud. For more questions, visit github.com/newhinton/Round-Sync.</string>
    <string name="intro_storage_title">Storage access</string>
    <string name="intro_storage_description">Round Sync relies on rclone and needs your permission to access all files. Please grant storage access when prompted, otherwise the application will not work properly.</string>
    <string name="intro_community_title">Community</string>
    <string name="intro_community_description">Round Sync is a community driven project. To contribute and improve the application, you can enable anonymous bug reporting. For more information, please visit felixnuesse.de/privacy-roundsync.</string>
    <string name="file_access">File Access</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="dark_theme">Dark theme</string>
    <string name="transfer_only_on_wifi">Transfer files only over Wi-Fi</string>
    <string name="transfer_only_on_wifi_summary">Require Wi-Fi connection for file transfers</string>
    <string name="pref_use_proxy_title">Use Proxy</string>
    <string name="pref_use_proxy_summary">Use proxy for all supported data transfers (HTTP, HTTPS)</string>
    <string name="pref_proxy_protocol">Proxy Protocol</string>
    <string name="pref_proxy_protocol_dlg_title">Select Protocol</string>
    <string name="pref_proxy_host">Proxy Host</string>
    <string name="pref_proxy_host_dlg_title">Enter Proxy IP or domain</string>
    <string name="pref_proxy_port">Proxy Port</string>
    <string name="pref_proxy_port_dlg_title">Enter Proxy port</string>
    <string name="pref_locale">Language</string>
    <string name="pref_locale_dlg_title">Select Language</string>
    <string name="pref_locale_restart_notice">Changing the language will take effect after restarting the app</string>
    <string name="use_logs">Save log files</string>
    <string name="use_logs_summary">When on, captures verbose rclone output and saves app diagnostic lines under Android/data/de.felixnuesse.extract/ with a readable name such as log_May_10_2026_3_00_PM.log (month, day, year, 12-hour time; colons become underscores). A new file is created when logging starts while this option is on. Off by default.</string>
    <string name="pref_clear_logs_title">Clear saved logs</string>
    <string name="media_folder_policy_remote_label">Remote</string>
    <string name="media_folder_policy_column_folder">Folder</string>
    <string name="media_folder_policy_column_thumbnail">Thumbnail</string>
    <string name="media_folder_policy_column_cache">Cache</string>
    <string name="media_folder_policy_add_folder">Add folder</string>
    <string name="media_folder_policy_empty">No folders in the policy list. Use Add folder to choose a directory on this remote.</string>
    <string name="media_folder_policy_safw_notice">This remote is SAF WebDAV. Folder rules are not enforced for thumbnails or cache on SAF remotes.</string>
</resources>